--- a/Authenticator/locales/fr_FR/LC_MESSAGES/authenticator.po
+++ b/Authenticator/locales/fr_FR/LC_MESSAGES/authenticator.po
@@ -1,183 +1,175 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: sysPass\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-16 23:35+0100\n"
-"PO-Revision-Date: 2017-08-16 23:36+0100\n"
-"Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
-"Language-Team:  <language@syspass.org>\n"
-"Language: ca_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.10\n"
+"Project-Id-Version: sysPass-Authenticator\n"
+"Language: fr_FR\n"
+"X-Generator: Poedit 1.6.10\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-KeywordsList: _t:2\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
+"Language-Team: \n"
 "X-Poedit-SearchPath-0: ../../..\n"
-
-#: ../../../ActionController.class.php:125
-msgid "Ey, esto es una DEMO!!"
-msgstr "Ey, això és una DEMO!!"
-
-#: ../../../ActionController.class.php:144
-msgid "2FA Habilitado"
-msgstr ""
-
-#: ../../../ActionController.class.php:147
-msgid "2FA Deshabilitado"
-msgstr ""
-
-#: ../../../ActionController.class.php:153
-msgid "Preferencias actualizadas"
-msgstr "Preferències actualitzades"
 
 #: ../../../ActionController.class.php:218
 msgid "Código incorrecto"
-msgstr "Codi incorrecte"
+msgstr "Code invalide"
 
-#: ../../../ActionController.class.php:264
-msgid "Código de recuperación utilizado"
-msgstr ""
+#: ../../../ActionController.class.php:125
+msgid "Ey, esto es una DEMO!!"
+msgstr "Hey, c'est une DEMO!!"
 
-#: ../../../ActionController.class.php:269
-#: ../../../ActionController.class.php:394
-#, fuzzy
-msgid "Preferencias"
-msgstr "Preferències actualitzades"
-
-#: ../../../ActionController.class.php:281
-msgid "Email de recuperación enviado"
-msgstr ""
+#: ../../../ActionController.class.php:153
+msgid "Preferencias actualizadas"
+msgstr "Préférences mise à jour"
 
 #: ../../../ActionController.class.php:308
 msgid "Código correcto"
-msgstr "Codi correcte"
-
-#: ../../../ActionController.class.php:330
-msgid "Recuperación de Código 2FA"
-msgstr ""
-
-#: ../../../ActionController.class.php:331
-msgid "Se ha solicitado un código de recuperación para 2FA."
-msgstr ""
-
-#: ../../../ActionController.class.php:333
-#, php-format
-msgid "El código de recuperación es: %s"
-msgstr ""
-
-#: ../../../ActionController.class.php:389
-msgid "Códigos de recuperación visualizados"
-msgstr ""
-
-#: ../../../ActionController.class.php:402
-msgid "Códigos de recuperación agotados"
-msgstr ""
+msgstr "Code valide"
 
 #: ../../../LoginController.class.php:123
-#, fuzzy
 msgid "Aviso Caducidad"
-msgstr "Data Edició"
+msgstr "Avis expiré"
 
 #: ../../../LoginController.class.php:128
-#, php-format
 msgid "El código 2FA se ha de restablecer en %d días"
-msgstr "El codi 2FA s'ha de restablir en %d dies."
+msgstr "Le code 2FA devra être remis à zéro dans %d jours"
 
 #: ../../../LoginController.class.php:134
 msgid ""
 "El código 2FA ha caducado. Es necesario restablecerlo desde las preferencias"
 msgstr ""
-"El codi 2FA ha caducat. Es necessari restablir-ho des de les preferències."
+"Le code 2FA  est expiré. vous devez le redéfinir dans l'onglet préférence"
 
 #: ../../../PreferencesController.class.php:98
 msgid "Seguridad"
-msgstr "Seguretat"
+msgstr "Sécurité"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:7
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:44
 msgid "Autentificación en 2 pasos"
-msgstr "Autenticació en 2 passos"
+msgstr "Authentification en 2 étapes"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:13
 msgid "Introducir código"
-msgstr "Introduir codi"
-
-#: ../../../themes/material-blue/views/main/login-2fa.inc:17
-msgid "Olvidé mi código"
-msgstr ""
+msgstr "Entrer le code"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:30
 msgid "Volver a iniciar sesión"
-msgstr "Tornar a iniciar sessió"
+msgstr "Revenir à la connexion"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:32
 msgid "Volver"
-msgstr "Tornar"
+msgstr "Revenir"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:36
 msgid "Acceder"
-msgstr "Accedir"
+msgstr "Connexion"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:38
 msgid "Solicitar"
-msgstr "Sol·licitar"
+msgstr "Requête"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:33
 msgid "Autentificación"
-msgstr "Autenticació"
+msgstr "Authentification"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:49
 msgid ""
 "Habilita la autentificación en 2 pasos que requiere de la introducción de un "
 "token generado por una aplicación como Google Authenticator."
 msgstr ""
-"Habilita l'autenticació en 2 passos que requereix de la introducció d'un "
-"token generat per una aplicació com Google Authenticator."
+"Activer l'authentification en 2 étapes nécessite une clé générée par une "
+"application comme Google Authenticator."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:53
 msgid ""
 "Escanee el código QR proporcionado y a continuación introduzca la clave de 6 "
 "dígitos."
-msgstr ""
-"Escanegi el codi QR proporcionat i a continuació introdueixi la clau de 6 "
-"dígits."
+msgstr "Scannez le QR code et entrez les 6 chiffres de la clé."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:62
 msgid "Activar"
-msgstr "Activar"
+msgstr "Activer"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:68
 msgid "Error al obtener el código QR. Inténtelo de nuevo"
-msgstr "Error en obtenir el codi QR. Intenti-ho de nou"
+msgstr "Erreur lors de la récupération du QR Code. Veuillez recommencer."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:77
 msgid "Código"
-msgstr "Codi"
+msgstr "Code"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:83
 msgid ""
 "Una vez activada, sólo es posible acceder si se dispone del dispositivo "
 "generador de códigos asociado."
 msgstr ""
-"Una vegada activada, només és possible accedir si es disposa del dispositiu "
-"generador de codis associat."
+"Une fois activé, vous devriez être capable de vous connecter avec le code "
+"généré lié à l'équipement."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:87
-#, fuzzy
 msgid "Días Caducidad"
-msgstr "Data Edició"
+msgstr "Nombre de jours avant expiration"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:94
 msgid "Días"
-msgstr "Dies"
+msgstr "Jours"
+
+#: ../../../ActionController.class.php:144
+msgid "2FA Habilitado"
+msgstr "2FA Enabled"
+
+#: ../../../ActionController.class.php:147
+msgid "2FA Deshabilitado"
+msgstr "2FA Disabled"
+
+#: ../../../ActionController.class.php:264
+msgid "Código de recuperación utilizado"
+msgstr "Recovery code used"
+
+#: ../../../ActionController.class.php:269
+#: ../../../ActionController.class.php:394
+msgid "Preferencias"
+msgstr "Preferences"
+
+#: ../../../ActionController.class.php:281
+msgid "Email de recuperación enviado"
+msgstr "Recovery email has been sent"
+
+#: ../../../ActionController.class.php:330
+msgid "Recuperación de Código 2FA"
+msgstr "2FA Code Recovery"
+
+#: ../../../ActionController.class.php:331
+msgid "Se ha solicitado un código de recuperación para 2FA."
+msgstr "A 2FA recovery code has been requested."
+
+#: ../../../ActionController.class.php:333
+msgid "El código de recuperación es: %s"
+msgstr "The recovery code is: %s"
+
+#: ../../../ActionController.class.php:389
+msgid "Códigos de recuperación visualizados"
+msgstr "Recovery codes displayed"
+
+#: ../../../ActionController.class.php:402
+msgid "Códigos de recuperación agotados"
+msgstr "There aren't any recovery codes available"
+
+#: ../../../themes/material-blue/views/main/login-2fa.inc:17
+msgid "Olvidé mi código"
+msgstr "Forgot my code"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:101
 msgid "Códigos Recuperación"
-msgstr ""
+msgstr "Recovery Codes"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:103
-#, fuzzy
 msgid "Ver códigos"
-msgstr "Codi"
+msgstr "Display codes"
