--- a/Authenticator/locales/fr_FR/LC_MESSAGES/authenticator.po
+++ b/Authenticator/locales/fr_FR/LC_MESSAGES/authenticator.po
@@ -1,42 +1,88 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: sysPass-Authenticator\n"
+"POT-Creation-Date: 2017-08-30 12:27+0100\n"
+"PO-Revision-Date: \n"
+"Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
+"Language-Team: \n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.10\n"
-"Project-Id-Version: sysPass-Authenticator\n"
-"Language: fr_FR\n"
 "X-Generator: Poedit 1.6.10\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-KeywordsList: _t:2\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
-"Language-Team: \n"
+"X-Contributors: Fabien, akirohs, matthgyver, Jérémy Donas\n"
 "X-Poedit-SearchPath-0: ../../..\n"
 
-#: ../../../ActionController.class.php:218
-msgid "Código incorrecto"
-msgstr "Code invalide"
-
-#: ../../../ActionController.class.php:125
+#: ../../../ActionController.class.php:130
 msgid "Ey, esto es una DEMO!!"
 msgstr "Hey, c'est une DEMO!!"
 
-#: ../../../ActionController.class.php:153
+#: ../../../ActionController.class.php:149
+msgid "2FA Habilitado"
+msgstr "2FA Activée"
+
+#: ../../../ActionController.class.php:152
+msgid "2FA Deshabilitado"
+msgstr "2FA Désactivée"
+
+#: ../../../ActionController.class.php:158
 msgid "Preferencias actualizadas"
 msgstr "Préférences mise à jour"
 
-#: ../../../ActionController.class.php:308
+#: ../../../ActionController.class.php:223
+msgid "Código incorrecto"
+msgstr "Code invalide"
+
+#: ../../../ActionController.class.php:269
+#, fuzzy
+msgid "Código de recuperación utilizado"
+msgstr "Code de récupération utilisé"
+
+#: ../../../ActionController.class.php:274
+#: ../../../ActionController.class.php:399
+msgid "Preferencias"
+msgstr "Préférences"
+
+#: ../../../ActionController.class.php:286
+msgid "Email de recuperación enviado"
+msgstr "L'e-mail de récupération vient d'être envoyé"
+
+#: ../../../ActionController.class.php:313
 msgid "Código correcto"
 msgstr "Code valide"
+
+#: ../../../ActionController.class.php:335
+msgid "Recuperación de Código 2FA"
+msgstr "Code de récupération 2FA"
+
+#: ../../../ActionController.class.php:336
+msgid "Se ha solicitado un código de recuperación para 2FA."
+msgstr "Un code de récupération 2FA a été demandé"
+
+#: ../../../ActionController.class.php:338
+#, php-format
+msgid "El código de recuperación es: %s"
+msgstr "Le code de récupération est: %s"
+
+#: ../../../ActionController.class.php:394
+#, fuzzy
+msgid "Códigos de recuperación visualizados"
+msgstr "Codes de récupération affichés"
+
+#: ../../../ActionController.class.php:407
+msgid "Códigos de recuperación agotados"
+msgstr "Il n'y a aucun code de récupération disponible"
 
 #: ../../../LoginController.class.php:123
 msgid "Aviso Caducidad"
 msgstr "Avis expiré"
 
 #: ../../../LoginController.class.php:128
+#, php-format
 msgid "El código 2FA se ha de restablecer en %d días"
 msgstr "Le code 2FA devra être remis à zéro dans %d jours"
 
@@ -58,6 +104,10 @@ msgstr "Authentification en 2 étapes"
 #: ../../../themes/material-blue/views/main/login-2fa.inc:13
 msgid "Introducir código"
 msgstr "Entrer le code"
+
+#: ../../../themes/material-blue/views/main/login-2fa.inc:17
+msgid "Olvidé mi código"
+msgstr "Code oublié"
 
 #: ../../../themes/material-blue/views/main/login-2fa.inc:30
 msgid "Volver a iniciar sesión"
@@ -121,55 +171,11 @@ msgstr "Nombre de jours avant expiration"
 msgid "Días"
 msgstr "Jours"
 
-#: ../../../ActionController.class.php:144
-msgid "2FA Habilitado"
-msgstr "2FA Enabled"
-
-#: ../../../ActionController.class.php:147
-msgid "2FA Deshabilitado"
-msgstr "2FA Disabled"
-
-#: ../../../ActionController.class.php:264
-msgid "Código de recuperación utilizado"
-msgstr "Recovery code used"
-
-#: ../../../ActionController.class.php:269
-#: ../../../ActionController.class.php:394
-msgid "Preferencias"
-msgstr "Preferences"
-
-#: ../../../ActionController.class.php:281
-msgid "Email de recuperación enviado"
-msgstr "Recovery email has been sent"
-
-#: ../../../ActionController.class.php:330
-msgid "Recuperación de Código 2FA"
-msgstr "2FA Code Recovery"
-
-#: ../../../ActionController.class.php:331
-msgid "Se ha solicitado un código de recuperación para 2FA."
-msgstr "A 2FA recovery code has been requested."
-
-#: ../../../ActionController.class.php:333
-msgid "El código de recuperación es: %s"
-msgstr "The recovery code is: %s"
-
-#: ../../../ActionController.class.php:389
-msgid "Códigos de recuperación visualizados"
-msgstr "Recovery codes displayed"
-
-#: ../../../ActionController.class.php:402
-msgid "Códigos de recuperación agotados"
-msgstr "There aren't any recovery codes available"
-
-#: ../../../themes/material-blue/views/main/login-2fa.inc:17
-msgid "Olvidé mi código"
-msgstr "Forgot my code"
-
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:101
 msgid "Códigos Recuperación"
-msgstr "Recovery Codes"
+msgstr "Codes de récupération"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:103
+#, fuzzy
 msgid "Ver códigos"
-msgstr "Display codes"
+msgstr "Afficher les codes"
