--- a/Authenticator/locales/en_GB/LC_MESSAGES/authenticator.po
+++ b/Authenticator/locales/en_GB/LC_MESSAGES/authenticator.po
@@ -1,50 +1,50 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: sysPass\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-15 02:28+0200\n"
-"PO-Revision-Date: 2018-10-15 02:28+0200\n"
+"Project-Id-Version: Authenticator\n"
+"POT-Creation-Date: 2018-10-15 02:27+0200\n"
+"PO-Revision-Date: 2018-10-15 02:30+0200\n"
 "Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
-"Language-Team: language@syspass.org\n"
-"Language: de_DE\n"
+"Language-Team: nuxsmin@syspass.org\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.11\n"
-"X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-Basepath: .\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _t:2\n"
 "X-Poedit-SearchPath-0: ../../../lib\n"
 "X-Poedit-SearchPath-1: ../../../themes\n"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:96
 msgid "Ey, esto es una DEMO!!"
-msgstr "Hey, dies ist eine DEMO!!"
+msgstr "Ey, this is a DEMO!!"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:116
 #: ../../../lib/Controllers/AuthenticatorController.php:300
 msgid "Código incorrecto"
-msgstr "Falscher Code"
+msgstr "Wrong code"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:162
 msgid "Código de recuperación utilizado"
-msgstr "Wiederherstellungscode benutzt"
+msgstr "Recovery code used"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:221
 msgid "2FA Habilitado"
-msgstr "2FA Deaktiviert"
+msgstr "2FA Enabled"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:232
 msgid "2FA Deshabilitado"
-msgstr "2FA Aktiviert"
+msgstr "2FA Disabled"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:276
 msgid "Email de recuperación enviado"
-msgstr "Email mit Wiederherstellungscode wurde gesendet"
+msgstr "Recovery email has been sent"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:292
 msgid "Código correcto"
-msgstr "Code bestätigt"
+msgstr "Correct code"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:334
 #: ../../../lib/Controllers/AuthenticatorController.php:340
@@ -53,95 +53,95 @@ msgstr "2FA Code Recovery"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:335
 msgid "Se ha solicitado un código de recuperación para 2FA."
-msgstr "Ein 2FA Wiederherstellungscode wurde angefragt."
+msgstr "A 2FA recovery code has been requested."
 
 #: ../../../lib/Controllers/AuthenticatorController.php:337
 #, php-format
 msgid "El código de recuperación es: %s"
-msgstr "Der Wiederherstellungscode lautet: %s"
+msgstr "The recovery code is: %s"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:374
 msgid "Códigos de recuperación visualizados"
-msgstr "Wiederherstellungscodes angezeigt"
+msgstr "Recovery codes displayed"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:381
 #: ../../../lib/Services/AuthenticatorService.php:199
 msgid "Códigos de recuperación agotados"
-msgstr "Es sind keine Wiederherstellungscodes verfügbar"
+msgstr "There aren't any recovery codes available"
 
 #: ../../../lib/Controllers/AuthenticatorLoginController.php:98
 #: ../../../lib/Controllers/AuthenticatorLoginController.php:104
 msgid "Aviso Caducidad"
-msgstr "Änderungsdatum"
+msgstr "Expire Notice"
 
 #: ../../../lib/Controllers/AuthenticatorLoginController.php:99
 #, php-format
 msgid "El código 2FA se ha de restablecer en %d días"
-msgstr "Der 2FA-Code muss innerhalb von %d Tagen zurückgesetzt werden."
+msgstr "The 2FA code will need to be reset within %d days"
 
 #: ../../../lib/Controllers/AuthenticatorLoginController.php:105
 msgid ""
 "El código 2FA ha caducado. Es necesario restablecerlo desde las preferencias"
-msgstr ""
-"Der 2FA Code ist abgelaufen. Du musst es auf der Registerkarte Einstellungen "
-"zurücksetzen."
+msgstr "The 2FA code is expired. You need to reset it on preferences tab"
 
 #: ../../../lib/Controllers/PreferencesController.php:153
 msgid "Seguridad"
-msgstr "Sicherheit"
+msgstr "Security"
 
 #: ../../../themes/material-blue/views/login/index.inc:10
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:19
 msgid "Autentificación en 2 pasos"
-msgstr "Zwei-Faktor Authentifizierung"
+msgstr "Two Factor Authentication"
 
 #: ../../../themes/material-blue/views/login/index.inc:16
 msgid "Introducir código"
-msgstr "Code eingeben"
+msgstr "Enter code"
 
 #: ../../../themes/material-blue/views/login/index.inc:21
 msgid "Olvidé mi código"
-msgstr "Ich habe meinen Code vergessen"
+msgstr "Forgot my code"
 
 #: ../../../themes/material-blue/views/login/index.inc:37
 msgid "Volver a iniciar sesión"
-msgstr "Zurück zur Anmeldung"
+msgstr "Back to log in"
 
 #: ../../../themes/material-blue/views/login/index.inc:39
 msgid "Volver"
-msgstr "Zurück"
+msgstr "Back"
 
 #: ../../../themes/material-blue/views/login/index.inc:43
 msgid "Acceder"
-msgstr "Anmeldung"
+msgstr "Log in"
 
 #: ../../../themes/material-blue/views/login/index.inc:45
 msgid "Solicitar"
-msgstr "Anfrage"
+msgstr "Request"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:7
 msgid "Autentificación"
-msgstr "Authentifizierung"
+msgstr "Authentication"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:24
 msgid ""
 "Habilita la autentificación en 2 pasos que requiere de la introducción de un "
 "token generado por una aplicación como Google Authenticator."
-msgstr "Aktiviert Zwei-Faktor-Authentifizierung"
+msgstr ""
+"Enables the two factor authentication that requires entering a token that is "
+"generated by an application like Google Authenticator."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:28
 msgid ""
 "Escanee el código QR proporcionado y a continuación introduzca la clave de 6 "
 "dígitos."
-msgstr "Scanne den angegebenen QR-Code und gib den sechs stelligen Code ein."
+msgstr "Please, scan the provided QR code and then enter the 6 digits key."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:37
 msgid "Activar"
-msgstr "Aktivieren"
+msgstr "Enable"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:46
 msgid "Error al obtener el código QR. Inténtelo de nuevo"
-msgstr "Fehler beim Abrufen des QR-Codes. Bitte erneut versuchen."
+msgstr "Error while getting the QR code. Please, try it again"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:56
 msgid "Código"
@@ -152,27 +152,27 @@ msgid ""
 "Una vez activada, sólo es posible acceder si se dispone del dispositivo "
 "generador de códigos asociado."
 msgstr ""
-"Sobald aktiviert, kannst du dich nur mit dem Codegenerator verbundenen Gerät "
-"anmelden."
+"Once enabled, you wil only be able to log in by using the code generator "
+"linked device."
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:67
 msgid "Días Caducidad"
-msgstr "Änderungsdatum"
+msgstr "Expiry Days"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:74
 msgid "Días"
-msgstr "Tage"
+msgstr "Days"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:82
 msgid "Códigos Recuperación"
-msgstr "Wiederherstellungscodes"
+msgstr "Recovery Codes"
 
 #: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:84
 msgid "Ver códigos"
-msgstr "Codes anzeigen"
+msgstr "Display codes"
 
 #~ msgid "Preferencias actualizadas"
-#~ msgstr "Einstellungen aktualisiert"
+#~ msgstr "Preferences updated"
 
 #~ msgid "Preferencias"
-#~ msgstr "Einstellungen"
+#~ msgstr "Preferences"
