--- a/src/locales/fr_FR/LC_MESSAGES/authenticator.po
+++ b/src/locales/fr_FR/LC_MESSAGES/authenticator.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sysPass-Authenticator\n"
-"POT-Creation-Date: 2018-10-15 02:28+0200\n"
+"POT-Creation-Date: 2018-11-05 01:07+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
 "Language-Team: \n"
@@ -19,158 +19,155 @@ msgstr ""
 "X-Poedit-SearchPath-1: ../../../themes\n"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:96
-msgid "Ey, esto es una DEMO!!"
+msgid "Ey, this is a DEMO!!"
 msgstr "Hey, c'est une DEMO!!"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:116
 #: ../../../lib/Controllers/AuthenticatorController.php:300
-msgid "Código incorrecto"
+msgid "Wrong code"
 msgstr "Code invalide"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:162
-msgid "Código de recuperación utilizado"
+msgid "Recovery code used"
 msgstr "Code de récupération utilisé"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:221
-msgid "2FA Habilitado"
+msgid "2FA Enabled"
 msgstr "2FA Activée"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:232
-msgid "2FA Deshabilitado"
+msgid "2FA Disabled"
 msgstr "2FA Désactivée"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:276
-msgid "Email de recuperación enviado"
+msgid "Recovery email has been sent"
 msgstr "L'e-mail de récupération vient d'être envoyé"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:292
-msgid "Código correcto"
+msgid "Correct code"
 msgstr "Code valide"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:334
 #: ../../../lib/Controllers/AuthenticatorController.php:340
-msgid "Recuperación de Código 2FA"
+msgid "2FA Code Recovery"
 msgstr "Code de récupération 2FA"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:335
-msgid "Se ha solicitado un código de recuperación para 2FA."
+msgid "A 2FA recovery code has been requested."
 msgstr "Un code de récupération 2FA a été demandé"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:337
 #, php-format
-msgid "El código de recuperación es: %s"
+msgid "The recovery code is: %s"
 msgstr "Le code de récupération est: %s"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:374
-msgid "Códigos de recuperación visualizados"
+msgid "Recovery codes displayed"
 msgstr "Codes de récupération affichés"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:381
-#: ../../../lib/Services/AuthenticatorService.php:199
-msgid "Códigos de recuperación agotados"
+#: ../../../lib/Services/AuthenticatorService.php:219
+msgid "There aren't any recovery codes available"
 msgstr "Il n'y a aucun code de récupération disponible"
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:98
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:104
-msgid "Aviso Caducidad"
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:99
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:105
+msgid "Expire Notice"
 msgstr "Avis expiré"
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:99
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:100
 #, php-format
-msgid "El código 2FA se ha de restablecer en %d días"
+msgid "The 2FA code will need to be reset within %d days"
 msgstr "Le code 2FA devra être remis à zéro dans %d jours"
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:105
-msgid ""
-"El código 2FA ha caducado. Es necesario restablecerlo desde las preferencias"
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:106
+msgid "The 2FA code is expired. You need to reset it on preferences tab"
 msgstr ""
 "Le code 2FA  est expiré. vous devez le redéfinir dans l'onglet préférence"
 
-#: ../../../lib/Controllers/PreferencesController.php:153
-msgid "Seguridad"
+#: ../../../lib/Controllers/PreferencesController.php:154
+msgid "Security"
 msgstr "Sécurité"
 
-#: ../../../themes/material-blue/views/login/index.inc:10
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:19
-msgid "Autentificación en 2 pasos"
+#: ../../../themes/material-blue/views/login/index.inc:17
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:26
+msgid "Two Factor Authentication"
 msgstr "Authentification en 2 étapes"
 
-#: ../../../themes/material-blue/views/login/index.inc:16
-msgid "Introducir código"
+#: ../../../themes/material-blue/views/login/index.inc:23
+msgid "Enter code"
 msgstr "Entrer le code"
 
-#: ../../../themes/material-blue/views/login/index.inc:21
-msgid "Olvidé mi código"
+#: ../../../themes/material-blue/views/login/index.inc:28
+msgid "Forgot my code"
 msgstr "Code oublié"
 
-#: ../../../themes/material-blue/views/login/index.inc:37
-msgid "Volver a iniciar sesión"
+#: ../../../themes/material-blue/views/login/index.inc:44
+msgid "Back to log in"
 msgstr "Revenir à la connexion"
 
-#: ../../../themes/material-blue/views/login/index.inc:39
-msgid "Volver"
+#: ../../../themes/material-blue/views/login/index.inc:46
+msgid "Back"
 msgstr "Revenir"
 
-#: ../../../themes/material-blue/views/login/index.inc:43
-msgid "Acceder"
+#: ../../../themes/material-blue/views/login/index.inc:50
+msgid "Log in"
 msgstr "Connexion"
 
-#: ../../../themes/material-blue/views/login/index.inc:45
-msgid "Solicitar"
+#: ../../../themes/material-blue/views/login/index.inc:52
+msgid "Request"
 msgstr "Requête"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:7
-msgid "Autentificación"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:14
+msgid "Authentication"
 msgstr "Authentification"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:24
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:31
 msgid ""
-"Habilita la autentificación en 2 pasos que requiere de la introducción de un "
-"token generado por una aplicación como Google Authenticator."
+"Enables the two factor authentication that requires entering a token that is "
+"generated by an application like Google Authenticator."
 msgstr ""
 "Activer l'authentification en 2 étapes nécessite une clé générée par une "
 "application comme Google Authenticator."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:28
-msgid ""
-"Escanee el código QR proporcionado y a continuación introduzca la clave de 6 "
-"dígitos."
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:35
+msgid "Please, scan the provided QR code and then enter the 6 digits key."
 msgstr "Scannez le QR code et entrez les 6 chiffres de la clé."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:37
-msgid "Activar"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:44
+msgid "Enable"
 msgstr "Activer"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:46
-msgid "Error al obtener el código QR. Inténtelo de nuevo"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:56
+msgid "Error while getting the QR code. Please, try it again"
 msgstr "Erreur lors de la récupération du QR Code. Veuillez recommencer."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:56
-msgid "Código"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:66
+msgid "Code"
 msgstr "Code"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:61
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:71
 msgid ""
-"Una vez activada, sólo es posible acceder si se dispone del dispositivo "
-"generador de códigos asociado."
+"Once enabled, you wil only be able to log in by using the code generator "
+"linked device."
 msgstr ""
 "Une fois activé, vous devriez être capable de vous connecter avec le code "
 "généré lié à l'équipement."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:67
-msgid "Días Caducidad"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:77
+msgid "Expiry Days"
 msgstr "Nombre de jours avant expiration"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:74
-msgid "Días"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:84
+msgid "Days"
 msgstr "Jours"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:82
-msgid "Códigos Recuperación"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:92
+msgid "Recovery Codes"
 msgstr "Codes de récupération"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:84
-msgid "Ver códigos"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:94
+msgid "Display codes"
 msgstr "Afficher les codes"
 
 #~ msgid "Preferencias actualizadas"
