--- a/src/locales/ru_RU/LC_MESSAGES/authenticator.po
+++ b/src/locales/ru_RU/LC_MESSAGES/authenticator.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sysPass\n"
-"POT-Creation-Date: 2018-10-15 02:29+0200\n"
+"POT-Creation-Date: 2018-11-05 01:08+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: nuxsmin <nuxsmin@syspass.org>\n"
 "Language-Team: Alexander Titov,Alex Us\n"
@@ -17,157 +17,154 @@ msgstr ""
 "X-Poedit-SearchPath-1: ../../../themes\n"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:96
-msgid "Ey, esto es una DEMO!!"
+msgid "Ey, this is a DEMO!!"
 msgstr "Эй, это Демо-версия!!"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:116
 #: ../../../lib/Controllers/AuthenticatorController.php:300
-msgid "Código incorrecto"
+msgid "Wrong code"
 msgstr "Неправильный код"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:162
-msgid "Código de recuperación utilizado"
+msgid "Recovery code used"
 msgstr "Recovery code used"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:221
-msgid "2FA Habilitado"
+msgid "2FA Enabled"
 msgstr "2FA Enabled"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:232
-msgid "2FA Deshabilitado"
+msgid "2FA Disabled"
 msgstr "2FA Disabled"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:276
-msgid "Email de recuperación enviado"
+msgid "Recovery email has been sent"
 msgstr "Recovery email has been sent"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:292
-msgid "Código correcto"
+msgid "Correct code"
 msgstr "Правильный код"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:334
 #: ../../../lib/Controllers/AuthenticatorController.php:340
-msgid "Recuperación de Código 2FA"
+msgid "2FA Code Recovery"
 msgstr "2FA Code Recovery"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:335
-msgid "Se ha solicitado un código de recuperación para 2FA."
+msgid "A 2FA recovery code has been requested."
 msgstr "A 2FA recovery code has been requested."
 
 #: ../../../lib/Controllers/AuthenticatorController.php:337
 #, php-format
-msgid "El código de recuperación es: %s"
+msgid "The recovery code is: %s"
 msgstr "The recovery code is: %s"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:374
-msgid "Códigos de recuperación visualizados"
+msgid "Recovery codes displayed"
 msgstr "Recovery codes displayed"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:381
-#: ../../../lib/Services/AuthenticatorService.php:199
-msgid "Códigos de recuperación agotados"
+#: ../../../lib/Services/AuthenticatorService.php:219
+msgid "There aren't any recovery codes available"
 msgstr "There aren't any recovery codes available"
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:98
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:104
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:99
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:105
 #, fuzzy
-msgid "Aviso Caducidad"
+msgid "Expire Notice"
 msgstr "Действует до"
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:99
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:100
 #, php-format
-msgid "El código 2FA se ha de restablecer en %d días"
+msgid "The 2FA code will need to be reset within %d days"
 msgstr "2FA код будет сброшен через %d дней."
 
-#: ../../../lib/Controllers/AuthenticatorLoginController.php:105
-msgid ""
-"El código 2FA ha caducado. Es necesario restablecerlo desde las preferencias"
+#: ../../../lib/Controllers/AuthenticatorLoginController.php:106
+msgid "The 2FA code is expired. You need to reset it on preferences tab"
 msgstr "2FA код просрочен. Вам нужно сбросить его на странице настроек"
 
-#: ../../../lib/Controllers/PreferencesController.php:153
-msgid "Seguridad"
+#: ../../../lib/Controllers/PreferencesController.php:154
+msgid "Security"
 msgstr "Безопасность"
 
-#: ../../../themes/material-blue/views/login/index.inc:10
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:19
-msgid "Autentificación en 2 pasos"
+#: ../../../themes/material-blue/views/login/index.inc:17
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:26
+msgid "Two Factor Authentication"
 msgstr "Двухфакторная аутентификация"
 
-#: ../../../themes/material-blue/views/login/index.inc:16
-msgid "Introducir código"
+#: ../../../themes/material-blue/views/login/index.inc:23
+msgid "Enter code"
 msgstr "Введите код"
 
-#: ../../../themes/material-blue/views/login/index.inc:21
-msgid "Olvidé mi código"
+#: ../../../themes/material-blue/views/login/index.inc:28
+msgid "Forgot my code"
 msgstr "Forgot my code"
 
-#: ../../../themes/material-blue/views/login/index.inc:37
-msgid "Volver a iniciar sesión"
+#: ../../../themes/material-blue/views/login/index.inc:44
+msgid "Back to log in"
 msgstr "Назад ко входу"
 
-#: ../../../themes/material-blue/views/login/index.inc:39
-msgid "Volver"
+#: ../../../themes/material-blue/views/login/index.inc:46
+msgid "Back"
 msgstr "Назад"
 
-#: ../../../themes/material-blue/views/login/index.inc:43
-msgid "Acceder"
+#: ../../../themes/material-blue/views/login/index.inc:50
+msgid "Log in"
 msgstr "Войти"
 
-#: ../../../themes/material-blue/views/login/index.inc:45
-msgid "Solicitar"
+#: ../../../themes/material-blue/views/login/index.inc:52
+msgid "Request"
 msgstr "Запрос"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:7
-msgid "Autentificación"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:14
+msgid "Authentication"
 msgstr "Аутентификация"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:24
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:31
 msgid ""
-"Habilita la autentificación en 2 pasos que requiere de la introducción de un "
-"token generado por una aplicación como Google Authenticator."
+"Enables the two factor authentication that requires entering a token that is "
+"generated by an application like Google Authenticator."
 msgstr "Включает двухфакторную аутентификацию, например Google Authenticator."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:28
-msgid ""
-"Escanee el código QR proporcionado y a continuación introduzca la clave de 6 "
-"dígitos."
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:35
+msgid "Please, scan the provided QR code and then enter the 6 digits key."
 msgstr "Отсканируйте QR-код и затем введите шестизначный пароль."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:37
-msgid "Activar"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:44
+msgid "Enable"
 msgstr "Активировать"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:46
-msgid "Error al obtener el código QR. Inténtelo de nuevo"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:56
+msgid "Error while getting the QR code. Please, try it again"
 msgstr "Ошибка получения QR-кода. Попробуйте еще раз."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:56
-msgid "Código"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:66
+msgid "Code"
 msgstr "Пароль"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:61
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:71
 msgid ""
-"Una vez activada, sólo es posible acceder si se dispone del dispositivo "
-"generador de códigos asociado."
+"Once enabled, you wil only be able to log in by using the code generator "
+"linked device."
 msgstr ""
 "После включения, Вы можете получить доступ только при наличии привязанного "
 "устройства."
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:67
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:77
 #, fuzzy
-msgid "Días Caducidad"
+msgid "Expiry Days"
 msgstr "Действует до"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:74
-msgid "Días"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:84
+msgid "Days"
 msgstr "Дни"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:82
-msgid "Códigos Recuperación"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:92
+msgid "Recovery Codes"
 msgstr "Recovery Codes"
 
-#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:84
-msgid "Ver códigos"
+#: ../../../themes/material-blue/views/userpreferences/preferences-security.inc:94
+msgid "Display codes"
 msgstr "Display codes"
 
 #~ msgid "Preferencias actualizadas"
