* [MOD] Updated translations * [MOD] Updated build number * [MOD] Updated version URL

--- a/src/locales/en_US/LC_MESSAGES/authenticator.po
+++ b/src/locales/en_US/LC_MESSAGES/authenticator.po
@@ -13,6 +13,7 @@ msgstr ""
 "X-Poedit-Basepath: ../../..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../../..\n"
 "X-Poedit-KeywordsList: _t:2\n"
 "X-Poedit-SearchPath-0: lib\n"
 "X-Poedit-SearchPath-1: themes\n"
