--- a/src/locales/fr_FR/LC_MESSAGES/authenticator.po
+++ b/src/locales/fr_FR/LC_MESSAGES/authenticator.po
@@ -10,13 +10,12 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.11\n"
-"X-Generator: Poedit 1.6.10\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-Basepath: .\n"
 "X-Contributors: Fabien, akirohs, matthgyver, Jérémy Donas\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../../..\n"
 "X-Poedit-KeywordsList: _t:2\n"
-"X-Poedit-SearchPath-0: ../../../lib\n"
-"X-Poedit-SearchPath-1: ../../../themes\n"
+"X-Poedit-SearchPath-0: lib\n"
+"X-Poedit-SearchPath-1: themes\n"
 
 #: ../../../lib/Controllers/AuthenticatorController.php:96
 msgid "Ey, this is a DEMO!!"
